--- a/Project/Client/Views/Shared/_LayoutNull.cshtml
+++ b/Project/Client/Views/Shared/_LayoutNull.cshtml
@@ -1,7 +1,4 @@
-﻿@{
-    Layout = "_LayoutNull";
-}
-@* <!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -10,6 +7,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.css">
     <style>
         body, html {
             height: 100%;
@@ -105,14 +104,14 @@
                 background-color: forestgreen;
             }
 
-        .Register {
+        .Login {
             color: darkgreen;
             text-decoration: none;
         }
 
-            .Register:hover {
+            .Login:hover {
                 color: #00d55e;
-        }
+            }
 
         .form-check-label {
             color: #f3f3f3;
@@ -125,28 +124,24 @@
         .white-background {
             padding-bottom: 10px;
         }
+
+        .text-center a {
+            color: grey;
+            text-decoration: none;
+        }
+
+            .text-center a:hover {
+                color: #00d55e;
+            }
     </style>
 </head>
-<body> *@
-<div class="login-container">
-    <div class="login-box">
-        <div class="login-logo">
-            <a asp-controller="Home" asp-action="Index"><img src="~/image/logo-remove.png" alt="Logo" /></a>
-        </div>
-        <h2 class="login-title">Forgot Password</h2>
-        <form>
-            <div class="login-input input-group">
-                <span class="input-group-text">
-                    <i class="bi bi-person"></i>
-                </span>
-                <input type="text" class="form-control" placeholder="Username" required>
-            </div>
-            <button type="submit" class="login-btn fw-bold">Continue</button>
-        </form>
-
-        <div class="white-background mt-2 text-center">
-            <div class="login-divider pt-2" style="color: grey;">Don't have an account yet?</div>
-            <a asp-controller="User" asp-action="Register" class="Register">Sign up for a new account?</a>
-        </div>
+<body>
+    <div>
+        <main role="main">
+            @RenderBody()
+        </main>
     </div>
-</div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
