--- a/Project/Client/Views/User/ChangePassword.cshtml
+++ b/Project/Client/Views/User/ChangePassword.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
-    Layout = null;
+    Layout = "_LayoutNull";
 }
-<!DOCTYPE html>
+@* <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -114,37 +114,37 @@
         }
     </style>
 </head>
-<body>
-    <div class="login-container">
-        <div class="login-box">
-            <div class="login-logo">
-                <a asp-controller="Home" asp-action="Index"><img src="~/image/logo-remove.png" alt="Logo" /></a>
-            </div>
-            <h2 class="login-title">Change Password</h2>
-            <form>
-                <div class="login-input input-group">
-                    <span class="input-group-text">
-                        <i class="bi bi-lock"></i>
-                    </span>
-                    <input type="password" class="form-control" placeholder="Password" required>
-                </div>
-                <div class="login-input input-group">
-                    <span class="input-group-text">
-                        <i class="bi bi-key"></i>
-                    </span>
-                    <input type="password" class="form-control" placeholder="New Password" required>
-                </div>
-                <div class="login-input input-group">
-                    <span class="input-group-text">
-                        <i class="bi bi-shield-lock"></i>
-                    </span>
-                    <input type="password" class="form-control" placeholder="Cofirm Password" required>
-                </div>
-                <button type="submit" class="login-btn fw-bold">Change Password</button>
-            </form>
+<body> *@
+<div class="login-container">
+    <div class="login-box">
+        <div class="login-logo">
+            <a asp-controller="Home" asp-action="Index"><img src="~/image/logo-remove.png" alt="Logo" /></a>
         </div>
+        <h2 class="login-title">Change Password</h2>
+        <form>
+            <div class="login-input input-group">
+                <span class="input-group-text">
+                    <i class="bi bi-lock"></i>
+                </span>
+                <input type="password" class="form-control" placeholder="Password" required>
+            </div>
+            <div class="login-input input-group">
+                <span class="input-group-text">
+                    <i class="bi bi-key"></i>
+                </span>
+                <input type="password" class="form-control" placeholder="New Password" required>
+            </div>
+            <div class="login-input input-group">
+                <span class="input-group-text">
+                    <i class="bi bi-shield-lock"></i>
+                </span>
+                <input type="password" class="form-control" placeholder="Cofirm Password" required>
+            </div>
+            <button type="submit" class="login-btn fw-bold">Change Password</button>
+        </form>
     </div>
-
+</div>
+@*
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-</html>
+</html> *@
