--- a/Project/Client/Views/User/Login.cshtml
+++ b/Project/Client/Views/User/Login.cshtml
@@ -1,9 +1,9 @@
 ﻿@{
-    Layout = null;
+    Layout = "_LayoutNull";
 }
 @using Client.Models.AuthenModel
 @model LoginRequestModel
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
+@* <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 <style>
@@ -121,7 +121,7 @@
     .white-background {
         padding-bottom: 10px;
     }
-</style>
+</style> *@
 <div class="login-container">
     <div class="login-box">
         <div class="login-logo">
@@ -170,5 +170,3 @@
         </div>
     </div>
 </div>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
